manifests/1-deployment.yaml
# This resource deploys one container multiple times (adjust the replicas value to see it happening!).
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-webapp
  labels:
    app.kubernetes.io/name: dotnet-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: dotnet-webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dotnet-webapp
    spec:
      containers:
      - name: dotnet-webapp
        image: "ghcr.io/harvest-masterclass-devops/dotnet-webapp:main"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          limits:
            memory: 256Mi
            cpu: 100m  # This is 0.1 cpu core (https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#meaning-of-cpu)
          requests:
            memory: 32Mi
            cpu: 5m
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
