manifests/3-ingress.yaml
# Forward incomming network traffic towards a service
# Under the hood it's adjusting the configuration of nginx.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-webapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: g.harvest.viya.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: dotnet-webapp
            port:
              name: http
  tls:
  - hosts:
    - g.harvest.viya.me
    secretName: tls-harvest-viya-me
